ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: welcome-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "welcome.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: welcome
spec:
  hosts:
  - "welcome.local"
  gateways:
  - welcome-gateway
  http:
  - match:
    - uri:
        prefix: /weather
    route:
    - destination:
        port:
          number: 80
        host: welcome
